align page headers correctly

--- a/app/assets/stylesheets/backstage.css.scss
+++ b/app/assets/stylesheets/backstage.css.scss
@@ -92,11 +92,12 @@ header {
 // Page header
 .page-header {
   margin-bottom: 20px;
+  margin-top: -5px;
 
   h2 {
-    font-size: 2em;
+    font-size: 1.5em;
     font-weight: 400;
-    margin: .5em 0;
+    margin: 0;
   }
 
   .sub {
@@ -116,6 +117,8 @@ header {
 
   .page-header h2 {
     font-size: 2em;
+    margin-bottom: .5em;
+    margin-top: .5em;
   }
 
   .timeline {
